adding readme file

--- a/netZooWeb/config.toml
+++ b/netZooWeb/config.toml
@@ -1,78 +1,32 @@
-baseURL = "https://netZoo.github.io/"
-
-# Site title
+baseURL = "https://netZoo.github.io"
+languageCode = "en-us"
 title = "The network zoo"
+theme = "hugo-theme-learn"
 
-# Copyright
-copyright = "(c) 2019 the netZoo."
+# For search functionality
+[outputs]
+home = ["HTML","RSS","JSON"]
 
-# Language
-languageCode = "en-EN"
+[[menu.shortcuts]] 
+name = "<i class='fab fa-fw fa-github'></i> Github repo"
+identifier = "da"
+url = "https://github.com/netZoo"
+weight = 10
 
-# "yaml", "toml", "json"
-metaDataFormat = "yaml"
+[[menu.shortcuts]]
+name = "<i class='fas fa-fw fa-cloud'></i> Travis-ci"
+identifier = "db"
+url = "https://travis-ci.org/netZoo"
+weight = 11
 
-# theme to use (located in /themes/THEMENAME/)
-theme = "hyde-y"
+[[menu.shortcuts]]
+name = "<i class='fas fa-fw fa-bookmark'></i> Codecov"
+identifier = "dc"
+url = "https://codecov.io/gh/netZoo"
+weight = 12
 
-# pagination
-paginate = 10
-paginatePath = "page"
-
-# Enable Disqus integration
-disqusShortname = "enten"
-
-#[permalinks]
-#    post = "/:year/:month/:day/:slug/"
-#    code = "/:slug/"
-
-[taxonomies]
-    tag = "tags"
-    topic = "topics"
-
-#[author]
-    #name = "yourname"
-    #email = "yourname@example.com"
-
-#
-# All parameters below here are optional and can be mixed and matched.
-#
-[params]
-    # You can use markdown here.
-    brand = "netZoo"
-    topline = "Network biology methods repository."
-    #footline = "code with <i class='fa fa-heart'></i>"
-
-    # Sidebar position
-    # false, true, "left", "right"
-    sidebar = "left"
-
-    # Text for the top menu link, which goes the root URL for the site.
-    # Default (if omitted) is "Home".
-    home = "home"
-
-    # Select a syntax highight.
-    # Check the static/css/highlight directory for options.
-    highlight = "default"
-
-    # Google Analytics.
-    googleAnalytics = "Your Google Analytics tracking code"
-
-    # Sidebar social links.
-    github = "netZoo" # Your Github profile ID
-    bitbucket = "" # Your Bitbucket profile ID
-    linkedin = "" # Your LinkedIn profile ID (from public URL)
-    googleplus = "" # Your Google+ profile ID
-    facebook = "" # Your Facebook profile ID
-    twitter = "" # Your Twitter profile ID
-    youtube = ""  # Your Youtube channel ID
-    flattr = ""  # populate with your flattr uid
-
-[blackfriday]
-    angledQuotes = true
-    fractions = false
-    hrefTargetBlank = false
-    latexDashes = true
-    plainIdAnchors = true
-    extensions = []
-    extensionmask = []
+[[menu.shortcuts]]
+name = "<i class='fas fa-fw fa-envelope-square'></i> Contact"
+identifier = "dd"
+url = "mailto:twang@hsph.harvard.edu"
+weight = 13
